// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField Component should render an error message 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="flex items-center gap-1 px-3 border rounded-md focus-within:ring-2 border-danger-200 focus-within:ring-danger-200"
    >
      <input
        class="flex-1 outline-none px-3 py-2 bg-transparent disabled:cursor-not-allowed [&::-webkit-search-cancel-button]:cursor-pointer"
        placeholder="Enter text"
        type="search"
        value=""
      />
    </div>
    <span
      class="text-sm text-danger-200"
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`InputField Component should render correctly without error 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="flex items-center gap-1 px-3 border rounded-md focus-within:ring-2 border-gray-300 focus-within:ring-primary-100"
    >
      <input
        class="flex-1 outline-none px-3 py-2 bg-transparent disabled:cursor-not-allowed [&::-webkit-search-cancel-button]:cursor-pointer"
        placeholder="Enter text"
        type="search"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`InputField Component should render with custom classes 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="flex items-center gap-1 px-3 border rounded-md focus-within:ring-2 border-gray-300 focus-within:ring-primary-100 custom-class"
    >
      <input
        class="flex-1 outline-none px-3 py-2 bg-transparent disabled:cursor-not-allowed [&::-webkit-search-cancel-button]:cursor-pointer"
        placeholder="Enter text"
        type="search"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`InputField Component should render with startIcon and endIcon 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="flex items-center gap-1 px-3 border rounded-md focus-within:ring-2 border-gray-300 focus-within:ring-primary-100"
    >
      <span>
        <span>
          Start
        </span>
      </span>
      <input
        class="flex-1 outline-none px-3 py-2 bg-transparent disabled:cursor-not-allowed [&::-webkit-search-cancel-button]:cursor-pointer"
        placeholder="Enter text"
        type="search"
        value=""
      />
      <span>
        <span>
          End
        </span>
      </span>
    </div>
  </div>
</div>
`;
